--- a/src/assets/style/element-ui/index.scss
+++ b/src/assets/style/element-ui/index.scss
@@ -5,63 +5,245 @@
 .el-select,
 .el-upload,
 .el-cascader,
-.el-autocomplete {width: 100%;}
-.el-scrollbar__wrap {overflow: auto !important;}
-.el-select-dropdown .el-scrollbar__wrap {overflow-x: scroll;}
-.el-message-box .el-button {width: 180px;}
-.el-dialog__body .el-upload {width: unset;}
-.el-image-viewer__canvas img {width: unset; height: unset;}
+.el-autocomplete {
+    width: 100%;
+}
 
-.el-message-box .el-button {width: 92px;}
+.el-scrollbar__wrap {
+    overflow: auto !important;
+}
+
+.el-select-dropdown .el-scrollbar__wrap {
+    overflow-x: scroll;
+}
+
+.el-message-box .el-button {
+    width: 180px;
+}
+
+.el-dialog__body .el-upload {
+    width: unset;
+}
+
+.el-image-viewer__canvas img {
+    width: unset;
+    height: unset;
+}
+
+.el-message-box .el-button {
+    width: 92px;
+}
 
 /* 全屏加载的圆圈 */
 .el-loading-spinner .path {
-  stroke: $color-main !important;
-  stroke-width: 8 !important;
+    stroke: $color-main !important;
+    stroke-width: 8 !important;
 }
+
 //.el-loading-mask.is-fullscreen .el-loading-spinner .circular {width: 128px !important; height: 128px !important;}
 
 
 /* messageBox X 颜色 */
-.el-message-box__headerbtn .el-message-box__close {color: $color-main !important;}
+.el-message-box__headerbtn .el-message-box__close {
+    color: $color-main !important;
+}
 
 /* 修复 select + input 框箭头样式 */
-.page-header .el-select {width: 120px;}
+.page-header .el-select {
+    width: 120px;
+}
 
 /* 日期选择框长度 */
 .el-date-editor.el-input,
-.el-date-editor.el-input__inner{width: 100% !important;}
+.el-date-editor.el-input__inner {
+    width: 100% !important;
+}
 
 /* 面包屑 */
 .el-breadcrumb .el-breadcrumb__inner a,
-.el-breadcrumb .el-breadcrumb__inner.is-link {color: $color-main;}
+.el-breadcrumb .el-breadcrumb__inner.is-link {
+    color: $color-main;
+    transition: .8s;
+}
+
 .el-breadcrumb .el-breadcrumb__inner a:hover,
-.el-breadcrumb .el-breadcrumb__inner.is-link:hover {color: $color-main-active !important;}
-.el-breadcrumb .el-breadcrumb__inner {color: $color-main;}
-.el-breadcrumb .el-breadcrumb__inner.is-link {font-weight: 600 !important; cursor: pointer !important;}
-.el-breadcrumb .el-breadcrumb__separator {font-weight: 100;}
+.el-breadcrumb .el-breadcrumb__inner.is-link:hover {
+    color: #0a78de !important;
+    transition: .6s;
+}
+
+.el-breadcrumb .el-breadcrumb__inner {
+    color: $color-main;
+}
+
+.el-breadcrumb .el-breadcrumb__inner.is-link {
+    font-weight: 600 !important;
+    cursor: pointer !important;
+}
+
+.el-breadcrumb .el-breadcrumb__separator {
+    font-weight: 100;
+}
 
 /* 步骤条 */
-.el-step__icon-inner[class*=el-icon]:not(.is-status) {font-size: 18px !important;}
-.el-step__title {font-size: 12px !important;}
+.el-step__icon-inner[class*=el-icon]:not(.is-status) {
+    font-size: 18px !important;
+}
+
+.el-step__title {
+    font-size: 12px !important;
+}
+
 .el-step__description.is-finish,
-.el-step__description.is-success {color: $color-gray-dark !important;}
+.el-step__description.is-success {
+    color: $color-gray-dark !important;
+}
 
 /* 日期选择器的样式 */
-.el-picker-panel__footer .el-button {width: unset;}
+.el-picker-panel__footer .el-button {
+    width: unset;
+}
 
 /* dialog 样式 */
 .el-dialog__header .el-dialog__title {
-  color: #393d49cf !important;
-  font-size: 17px;
-  font-weight: 600;
-  line-height: 17px;
+    color: #393d49cf !important;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 17px;
 }
-.el-dialog__body {padding: 15px 20px !important;}
-.unset-form-item-mb-15 {margin-bottom: unset !important;}
+
+.el-dialog__body {
+    padding: 15px 20px !important;
+}
+
+.unset-form-item-mb-15 {
+    margin-bottom: unset !important;
+}
 
 /* 上传标签内容去掉居中 */
-.el-upload {text-align: unset !important;}
+.el-upload {
+    text-align: unset !important;
+}
 
 /* 行存在图片的列表 */
-.tb-has-img ::v-deep .el-table .cell {line-height: unset;}
+.tb-has-img ::v-deep .el-table .cell {
+    line-height: unset;
+}
+
+
+/* 移动端适配 */
+@media screen and (max-width: 750px) {
+    // 表单
+    .fm {
+        ::v-deep {
+            .el-input {
+                font-size: 28px;
+
+                .el-input__inner {
+                    height: 80px;
+                    padding: 0 60px;
+                    border-radius: 12px;
+                    line-height: 80px;
+                }
+
+                .el-input__icon {
+                    font-size: 32px;
+                    line-height: 80px;
+                }
+
+                .el-input__prefix {left: 15px;}
+                .el-input__suffix {
+                    top: 3px;
+                    right: 25px;
+                }
+            }
+            .el-button {
+                padding: 24px 20px;
+                border-radius: 8px;
+                font-size: 28px;
+                letter-spacing: 3px;
+            }
+        }
+    }
+    // 确认框
+    .el-message-box {
+        width: 600px !important;
+        .el-message-box__title,
+        .el-message-box__headerbtn {font-size: 36px;}
+        .el-message-box__content {
+            padding: 20px;
+            font-size: 30px;
+            .el-message-box__message p {line-height: 40px;}
+        }
+        .el-message-box__btns {
+            padding: 15px 20px 5px;
+            .el-button--small {
+                width: max-content;
+                padding: 18px 25px;
+                font-size: 26px;
+                border-radius: 6px;
+            }
+            button:nth-child(2) {margin-left: 20px;}
+        }
+    }
+    // 消息提示
+    .el-message {
+        top: 30px !important;
+        .el-message__content {
+            padding: 10px;
+            font-size: 28px;
+        }
+        .el-message__icon {font-size: 28px;}
+    }
+    // 全屏加载的圆圈
+    .el-loading-mask.is-fullscreen .el-loading-spinner .circular {width: 150px !important; height: 150px !important;}
+    // 下拉框选项
+    .el-select-dropdown.el-popper {
+        .el-select-dropdown__item {
+            font-size: 22px;
+            height: 60px;
+            line-height: 60px;
+        }
+    }
+    // 按钮
+    .el-button--small {
+        padding: 18px;
+        font-size: 22px;
+        border-radius: 6px;
+    }
+    ::v-deep {
+        // 列表
+        .el-table {
+            tr {
+                th {font-size: 26px !important; line-height: 60px;}
+                td .cell {
+                    line-height: 40px;
+                    .el-link--inner {font-size: 22px;}
+                }
+                .cell.el-tooltip {font-size: 22px;}
+            }
+            .el-table__body-wrapper {font-size: 22px;}
+        }
+        // 分页
+        .el-pagination {
+            .el-pagination__total,
+            .el-pagination__jump {
+                height: 60px;
+                font-size: 22px;
+                line-height: 60px;
+            }
+            .btn-next .el-icon,
+            .btn-prev .el-icon {font-size: 20px;}
+            .btn-next,
+            .btn-prev {
+                width: 60px; height: 60px; line-height: 60px;
+            }
+            .el-pager li {
+                height: 60px;
+                padding: 0 25px;
+                font-size: 20px;
+                line-height: 60px;
+            }
+        }
+    }
+}
