--- a/src/assets/style/element-ui/index.scss
+++ b/src/assets/style/element-ui/index.scss
@@ -255,5 +255,48 @@
             }
             .el-pagination__editor.el-input .el-input__inner {height: 50px; font-size: 20px;}
         }
+        // action sheet
+        .van-popup--bottom.van-popup--round {
+            border-radius: 15px 15px 0 0;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            .van-action-sheet__description {
+                position: relative;
+                padding: 20px 16px;
+                color: #969799;
+                font-size: 28px;
+                line-height: 60px;
+                text-align: left;
+            }
+            .van-action-sheet__item {
+                background-color: #fff;
+                padding: 25px 16px;
+                color: #0a78de;
+                font-size: 28px;
+                cursor: pointer;
+                line-height: 50px;
+                &:not(:first-child) {
+                    border-top: 0.1px solid #C1C1C1 !important;
+                }
+                &:hover,
+                &:active {
+                    background-color: #E8F4FF;
+                }
+                .van-action-sheet__subname {
+                    margin-top: 8px;
+                    color: #969799;
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+            }
+            .van-action-sheet__cancel {
+                padding: 25px 16px;
+                font-size: 28px;
+                cursor: pointer;
+                line-height: 55px;
+            }
+        }
     }
 }
