--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -109,6 +109,9 @@
 /* 列表操作文字按钮样式 */
 .fs-12 {font-size: 12px !important;}
 
+/* dr 内边距 */
+.el-drawer__body {padding: 0 15px;}
+
 
 /* 移动端适配 */
 .dp-pc {display: block;}
