--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -112,6 +112,12 @@
 /* dr 内边距 */
 .el-drawer__body {padding: 0 15px;}
 
+/* 气跑确认框 */
+.el-popover.el-popper {
+  .el-popconfirm__action {
+    .el-button {width: max-content;}
+  }
+}
 
 /* 移动端适配 */
 .dp-pc {display: block;}
