--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -119,12 +119,13 @@
   }
 }
 
+
 /* 移动端适配 */
 .dp-pc {display: block;}
 .dp-m {display: none;}
-@media screen and (max-width: 750px) {
-  .dp-pc {display: none;}
-  .dp-m {display: block;}
+@media screen and (max-width: 1200px) {
+  //.dp-pc {display: none;}
+  //.dp-m {display: block;}
   /* 列表筛选项 */
   .filters {
     .item {
@@ -140,8 +141,13 @@
       .el-input--small .el-input__inner {width: 300px; height: 60px;}
     }
   }
-  .fn-btns {margin-bottom: 15px; display: flex; flex-direction: row;}
-  .fn-btn {min-width: min-content; max-width: max-content;}
+  .fn-btns {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .fn-btn {min-width: min-content; max-width: max-content; margin-bottom: 15px;}
+  }
   // 列表缩略 tips
   .el-tooltip__popper {font-size: 26px !important;}
   // dropdown
@@ -149,6 +155,23 @@
     .el-dropdown-menu__item {
       font-size: 28px;
       padding: 20px 40px;
+    }
+  }
+
+  ::v-deep {
+    /* 列表 */
+    .el-table {
+      tr {
+        th {font-size: 22px;}
+        td {
+          padding: 16px 0;
+          .cell {
+            line-height: 40px;
+            .el-link--inner {font-size: 20px;}
+          }
+          .cell.el-tooltip {font-size: 20px;}
+        }
+      }
     }
   }
 }
